--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cookie_js": "^1.3.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "jquery": "^3.4.1",
+    "normalize-scss": "^7.0.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.7",
+    "vuex": "^3.0.1",
+    "webpack": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -32,6 +35,7 @@
     "prettier": "^1.18.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vue-loader": "latest"
   }
 }
